syntax = "proto3";

package atomix.session_id_generator;

option java_package = "io.atomix.primitive.session.impl.proto";
option java_outer_classname = "SessionIdGeneratorProto";
option java_multiple_files = true;

// Session ID generator snapshot format
message SessionIdGeneratorSnapshot {
    // The current session ID
    int64 id = 1;
}

// Next session ID request
message NextRequest {

}

// Next session ID response
message NextResponse {
    int64 session_id = 1;
}